# mscp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  build.sh  conanfile.txt  install-build-deps.sh  pysetup.py  setup.py
.github/workflows/: build-freebsd.yml  build-macos.yml  build-ubuntu.yml  build.yml  cmake.yml  codeql.yml  release.yml  test.yml
Dockerfile/: .gitignore  README.md  almalinux-9.3.Dockerfile  alpine-3.19.Dockerfile  alpine-3.22.Dockerfile  arch-base.Dockerfile  build-deb.Dockerfile  build-srpm.Dockerfile  rocky-8.9.Dockerfile  rocky-9.3.Dockerfile  ubuntu-20.04.Dockerfile  ubuntu-22.04.Dockerfile  ubuntu-24.04.Dockerfile
debian/: .gitignore  changelog  control  copyright  rules
doc/: DEVELOP.md  README.md  RELEASE.md  mscp.1.in  mscp.rst
docker/: .gitignore  Dockerfile-centos-8  Dockerfile-test  Dockerfile-ubuntu-20.04  Dockerfile-ubuntu-22.04  README.md  almalinux-8.8.Dockerfile  alpine-3.17.Dockerfile  build-deb.Dockerfile  build-srpm.Dockerfile.in  centos-8.Dockerfile  rocky-8.6.Dockerfile  rocky-8.8.Dockerfile  ubuntu-20.04.Dockerfile  ubuntu-22.04.Dockerfile
examples/: .gitignore  mscp-example.ipynb  mscp-python.py
include/: config.h.in  mscp.h  mscp_version.h.in
mscp/: __init__.py  mscp.py
patch/: README.md  libssh-0.10.4.patch  libssh-0.10.6-2-g6f1b1e76.patch  libssh-0.10.6.patch  libssh-0.11.2.patch  libssh-0.9.6.patch
rpm/: .gitignore  README.md  mscp.spec.in
scripts/: install-build-deps.sh  print-install-deps.sh  test-in-container.sh
src/: atomic.h  bwlimit.c  bwlimit.h  checkpoint.c  checkpoint.h  file.c  file.h  fileops.c  fileops.h  list.h  main.c  message.c  message.h  minmax.h  mscp.c  mscp.h  netdev.c  netdev.h  path.c  path.h  platform.c  platform.h  pool.c  pool.h  pprint.c  pprint.h  print.c  print.h  pymscp.c  rename-logic.py  ssh.c  ssh.h  strerrno.c  strerrno.h  test.c  util.h
src/openbsd-compat/: openbsd-compat.h  strlcat.c
test/: Makefile  README.md  conftest.py  test_e2e.py  test_python.py  util.py
